# castep-auto-hubbard

./: .gitignore  README.md
CASTEP_project_doc/: Autodouble_计算流程.docx  GDY_111_Fe_U.castep  HubbardAlphaU_计算流程.docx  读数据流程.docx
CASTEP_project_doc/GDY_111_Fe_U/: GDY_111_Fe_U.cell  GDY_111_Fe_U.kptaux  GDY_111_Fe_U.msi  GDY_111_Fe_U.trjaux  GDY_111_Fe_U.xsd
auto_hubbard/: Cargo.toml
auto_hubbard/src/: main.rs
auto_hubbard/src/arguments/: cli_interface.rs  mod.rs  program_mode.rs
auto_hubbard/src/errors/: mod.rs
auto_hubbard/src/pipeline/: sequence.rs
auto_hubbard/src/seed_settings/: cell_setup.rs  job_type.rs  mod.rs  param_setup.rs  private.rs  stage.rs
auto_hubbard/src/seed_settings/hubbard/: mod.rs
hubbard_data/: Cargo.toml  flake.nix
hubbard_data-workspace/: Cargo.toml  flake.nix
hubbard_data-workspace/hubbard_data/: Cargo.toml
hubbard_data-workspace/hubbard_data/src/: main.rs
hubbard_data-workspace/hubbard_data_analyze/: Cargo.toml
hubbard_data-workspace/hubbard_data_analyze/src/: job_type.rs  lib.rs
hubbard_data-workspace/hubbard_data_analyze/src/analysis/: channel_view.rs  csv_path.rs  merged_view.rs  mod.rs  total_view.rs
hubbard_data-workspace/hubbard_data_analyze/src/analysis/channel_view/: mean_view.rs  merged_view.rs
hubbard_data-workspace/hubbard_data_args/: Cargo.toml
hubbard_data-workspace/hubbard_data_args/src/: lib.rs
hubbard_data-workspace/hubbard_data_plot/: Cargo.toml
hubbard_data-workspace/hubbard_data_plot/src/: lib.rs
hubbard_data/src/: main.rs
hubbard_data/src/config/: mod.rs
hubbard_data/src/dataframe/: mod.rs  plot.rs
sh/: auto.sh  auto_hubbard_alpha_parallel_linux.sh  auto_hubbard_alpha_parallel_mac.sh  auto_hubbard_alpha_serial_linux.sh  auto_hubbard_alpha_serial_mac.sh  auto_hubbard_linux.sh  auto_hubbard_parallel_linux.sh  auto_hubbard_serial_linux.sh  auto_hubbard_u_parallel_linux.sh  auto_hubbard_u_parallel_mac.sh  auto_hubbard_u_serial_linux.sh  auto_hubbard_u_serial_mac.sh  auto_parallel.sh  functions_linux.sh
sh/test/: GDY_111_Fe_U.param  SMCastep_Extension_GDY_111_Fe_U.xms  ZnO_LR.castep  ZnO_LR.cell  ZnO_LR.param
sorting/: result_alpha_final.csv  result_u_final.csv
