[package]
name = "auto_hubbard"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.42", features = ["derive"] }
inquire = "0.7.5"
tracing-subscriber = "0.3.18"
castep_cell_data = { git = "https://github.com/TonyWu20/castep-cell-io", branch = "serde" }
castep-periodic-table = "0.5.2"
derive_builder = "0.20.2"
anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
