[package]
name = "hubbard_data"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.39", features = ["derive"] }
derive_builder = "0.20.2"
plotlars = "0.9.4"
polars = { version = "0.48.1", features = ["lazy", "concat_str", "strings", "dtype-i128", ] }
polars-lazy = { version = "0.48.1", features = ["pivot"] }
