[package]
name = "hubbard_data"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
charming = { version = "0.5.1", features = ["ssr", "ssr-raster"] }
clap = { version = "4.5.39", features = ["derive"] }
polars = { version = "0.48.1", features = ["lazy", "concat_str", "strings", "dtype-i128", ] }

[target.x86_64-unknown-linux-gnu]
linker = "x86_64-unknown-linux-gnu-gcc"
